[package]
name = "dropjack"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = "5.5.1"  # Keep raylib for excellent graphics capabilities
rodio = "0.20"    # Add rodio for simple, reliable audio
rusqlite = { version = "0.36.0", features = ["bundled"] }
rand = "0.9.1"
chrono = "0.4.41"
dirs = "6.0.0"
